Refactor load and shot models to enforce validation in constructors
- Removed custom LoadMeasurement validation annotation and its validator.
- Added validation logic in Load and Shot constructors to ensure valid measurement units and values.
- Introduced VelocityStatisticsGatherer for efficient single-pass statistics computation in LoadsService.
- Enhanced SecurityUtils to utilize Java 25 pattern matching for cleaner code.
- Updated exception handling in GlobalExceptionHandler for better error messages.
- Refactored controller tests to assert constructor validation instead of relying on HTTP status checks.
- Improved performance in LoadsService by reducing multiple stream passes to a single pass for statistics calculation.
- Updated unit tests to reflect changes in validation logic and constructor behavior.